--- a/web-design-surrey.html
+++ b/web-design-surrey.html
@@ -32,13 +32,13 @@ permalink: /web-design-surrey/
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Web Design Services in Surrey | Sybiltec</title>       
-        <meta name="Description" content="Web design and development services are available to Surrey small businesses. Contact us today to find out how we can elevate your online presence.">
+        <meta name="Description" content="Web design for Surrey small businesses and charities. Contact us to discuss how we can elevate your online presence. Shopify, WordPress & WooCommerce.">
         <meta name="robots" content="all">
         <link rel="canonical" href="https://sybiltec.com/web-design-surrey/">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Web Design Services in Surrey | Sybiltec" />
-        <meta property="og:description" content="Web design and development services are available to Surrey small businesses. Contact us today to find out how we can elevate your online presence." />
+        <meta property="og:description" content="Web design for Surrey small businesses and charities. Contact us to discuss how we can elevate your online presence. Shopify, WordPress & WooCommerce." />
         <meta property="og:url" content="https://sybiltec.com/web-design-surrey/" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
@@ -166,7 +166,7 @@ permalink: /web-design-surrey/
                         Web Design Services in Surrey
                     </li>
                 </ol>
-                <h2>The Importance of a Website for Your Small Business</h2>
+                <h2>The Importance of a Website for Your Small Business in Surrey</h2>
                 <p>Standing out in an increasingly competitive market is one of the biggest challenges for the small businesses of today. Being present on a few social media platforms is no longer sufficient to develop a successful business. You must combine a range of methods to form an effective marketing strategy, and your website should be central to that strategy.</p>
 
                 <p>Why should your website be at the core of your marketing? Because it is the one thing that you truly own and control. Additionally, running a business without a website can mean that you miss out on valuable opportunities to increase enquiries, leads, and make sales.</p>
@@ -180,16 +180,6 @@ permalink: /web-design-surrey/
                 </ul>
 
                 <p>If you do not already have a website, it's time to start thinking about building one. Or, if you have an existing site but it's not working for you for any reason, consider restructuring or redesigning it. Are you a <strong>small business owner in Surrey</strong> seeking support with your website? Contact us today to find out how we can help.</p>
-
-                <h2>Why Choose Sybiltec's Services</h2>
-                <p>At Sybiltec, we understand what makes websites work. We'll build a website for you that meets your business' individual needs. Here's how you'll benefit from the service:</p>
-                <ul>
-                    <li>We can make a start on your project right away and you'll be sent regular updates on the progress of your project, so you won't be kept waiting</li>
-                    <li>You'll receive a high quality service without the high costs that agencies charge</li>
-                    <li>You'll receive a custom design that's aligned with your business' unique brand and values</li>
-                    <li>You will be able to edit the website yourself after it has launched, saving you time and money</li>
-                    <li>We will communicate with you using jargon-free language</li>
-                </ul>
 
                 </div>
 
@@ -213,7 +203,7 @@ permalink: /web-design-surrey/
                         <div class="col-7">
                             <h2>Fortis DPC</h2>
                             <h3 style="font-size: 18px;">Delivering complete cyber security and data protection compliance solutions</h3>
-                            <p>We redesigned Fortis DPC's website with a brand new look and feel which upholds the company's values of strength, security and trust. Services provided:</p>
+                            <p>We redesigned Fortis DPC's website with a brand new look and feel which upholds the company's values of strength, security and trust. We also set up the e-commerce functionality to showcase the new range of digital services being offered. Services provided:</p>
                             <ul>
                                 <li>Website redesign</li>
                                 <li>WooCommerce integration</li>
@@ -300,6 +290,16 @@ permalink: /web-design-surrey/
                         </div>
                     </div>
                 </div>
+
+                <h2>Why Choose Sybiltec's Services</h2>
+                <p>At Sybiltec, we understand what makes websites work. We'll build a website for you that meets your business' individual needs. Here's how you'll benefit from the service:</p>
+                <ul>
+                    <li>We can make a start on your project right away and you'll be sent regular updates on the progress of your project, so you won't be kept waiting</li>
+                    <li>You'll receive a high quality service without the high costs that agencies charge</li>
+                    <li>You'll receive a custom design that's aligned with your business' unique brand and values</li>
+                    <li>You will be able to edit the website yourself after it has launched, saving you time and money</li>
+                    <li>We will communicate with you using jargon-free language</li>
+                </ul>
 
                 <h2>How the Web Design Process Works</h2>
                 <p><a href="https://sybiltec.com/contact/">Contact us</a> today to arrange a free initial consultation. During the consultation, we'll ask you some questions about your business and your reason for needing our website services. It's also a chance for you to ask us anything and determine if we are a good fit for each other. If you would like to take things further, we'll arrange a longer, in-depth conversation to understand your business and requirements in more detail.</p>
