--- a/training.html
+++ b/training.html
@@ -244,31 +244,32 @@ permalink: /training/
                         <p><a href="https://sybiltec.com/leaflet-design/">Leaflet Design</a></p>
                     </div>
                     <div class="col-3">
-                        <div class="ml-form-embed"
-                            data-account="2216689:x9i7o3w7n4"
-                            data-form="5270027:e5c2j0">
-                        </div>
-                        <h4>Address</h4>
-                        <p>The Engine House<br>2 Veridion Way<br>Erith DA18 4AL</p>
+                        <h4>Some of the Areas We Cover</h4>
+                        <p><a href="https://sybiltec.com/website-design/">Web Design in Bexley</a></p>
+                        <p><a href="https://sybiltec.com/web-design-surrey/">Web Design in Surrey</a></p>
+                        <p><a href="https://sybiltec.com/free-workshops-greenwich-borough/">Workshops in Greenwich</a></p>
                     </div>
                     <div class="col-3">
                         <h4>Get in Touch</h4>
-                        <p>
-                            <p><a href="mailto:info@sybiltec.com?subject=Website Enquiry">info@sybiltec.com</a></p>
-                            <a href="https://www.linkedin.com/in/sybil-m" target="_blank" rel="noopener noreferrer">
-                                <i class="fa-brands fa-linkedin"></i></a>
-                            <a href="https://instagram.com/sybiltec/" target="_blank" rel="noopener noreferrer">
-                                <i class="fa-brands fa-instagram"></i></a>
-                            <a href="https://www.pinterest.co.uk/sybiltec/" target="_blank" rel="noopener noreferrer">
-                                <i class="fa-brands fa-pinterest"></i></a>
-			                <a href="https://www.facebook.com/sybiltec" target="_blank" rel="noopener noreferrer">
-                                <i class="fa-brands fa-facebook"></i></a>
-                            <a href="https://x.com/sybiltec" target="_blank" rel="noopener noreferrer">
-                                <i class="fa-brands fa-x-twitter"></i></a>
-                        </p>
+                            <p><a href="mailto:info@sybiltec.com?subject=Website Enquiry">info@sybiltec.com</a><br>
+                                The Engine House<br>2 Veridion Way<br>Erith DA18 4AL</p>
+                            <p>
+                                <a href="https://www.linkedin.com/in/sybil-m" target="_blank" rel="noopener noreferrer">
+                                    <i class="fa-brands fa-linkedin"></i></a>
+                                <a href="https://instagram.com/sybiltec/" target="_blank" rel="noopener noreferrer">
+                                    <i class="fa-brands fa-instagram"></i></a>
+                                <a href="https://www.pinterest.co.uk/sybiltec/" target="_blank" rel="noopener noreferrer">
+                                    <i class="fa-brands fa-pinterest"></i></a>
+    			                <a href="https://www.facebook.com/sybiltec" target="_blank" rel="noopener noreferrer">
+                                    <i class="fa-brands fa-facebook"></i></a>
+                                <a href="https://x.com/sybiltec" target="_blank" rel="noopener noreferrer">
+                                    <i class="fa-brands fa-x-twitter"></i></a>
+                                <a href="https://www.tiktok.com/@sybiltec" target="_blank" rel="noopener noreferrer">
+                                    <i class="fa-brands fa-tiktok"></i></a>
+                            </p>
                         <p>
                             <a href="https://www.uksmallbusinessdirectory.co.uk/bid/284687/" rel="noopener noreferrer" target="_blank"><img src="https://www.uksmallbusinessdirectory.co.uk/links/uksbd-100.png" alt="Business Directory"></a>
-                        </p>                   
+                        </p>      
                     </div>
                 </div>
             </div>
