Update mock ups on homepage

--- a/index.html
+++ b/index.html
@@ -183,18 +183,19 @@
         <div class="clients section container-1140 padding-top">
             <h2 class="center">What We've Done</h2>
                 <hr>
+            <p class="center">We have worked with businesses from a wide variety of industry sectors, including consultancies, wellbeing organisations, creatives, charities and fashion brands.<br>See some examples of our best work below.</p>
             <div class="padding-top center">
                 <div class="row">
+                    <div class="col-3"><img src="images/clients/bexley-linkup.png" alt="Bexley Linkup"><p class="customer">Bexley Linkup</p></div>
                     <div class="col-3"><img src="images/clients/emrys.png" alt="Emrys Technology & Consultancy"><p class="customer">Emrys Technology & Consultancy</p></div>
+                    <div class="col-3"><img src="images/clients/fortis-dpc.png" alt="Fortis DPC (Data Protection Compliance)"><p class="customer">Fortis DPC</p></div>
                     <div class="col-3"><img src="images/clients/happily-clappily-ever-laughter.png" alt="Happily Clappily Ever Laughter"><p class="customer">Happily Clappily Ever Laughter</p></div>
-                    <div class="col-3"><img src="images/clients/jenup-courses.png" alt="JenUp Courses"><p class="customer">JenUp Courses</p></div>
-                    <div class="col-3"><img src="images/clients/kiko-by-astons-of-london.png" alt="Kiko by Astons of London"><p class="customer">Kiko by Astons of London</p></div>
                 </div>
                 <div class="row">
                     <div class="col-3"><img src="images/clients/lcg-lift-consultancy.png" alt="LCG Lift Consultancy"><p class="customer">LCG Lift Consultancy</p></div>
-                    <div class="col-3"><img src="images/clients/ld-tiling-contractors.png" alt="LD Tiling Contractors"><p class="customer">LD Tiling Contractors</p></div>
+                    <div class="col-3"><img src="images/clients/nerowireart.png" alt="NeroWireArt"><p class="customer">NeroWireArt</p></div>
                     <div class="col-3"><img src="images/clients/new-haw-community-centre.png" alt="New Haw Community Centre"><p class="customer">New Haw Community Centre</p></div>
-                    <div class="col-3"><img src="images/clients/tech-diplomacy-academy.jpg" alt="Tech Diplomacy Academy"><p class="customer">Tech Diplomacy Academy</p></div>
+                    <div class="col-3"><img src="images/clients/techwomen4boards.png" alt="TechWomen4Boards"><p class="customer">TechWomen4Boards</p></div>
                 </div>
             </div>
             <div class="center padding-bottom padding-top"><a class="btn-secondary padding-top" href="https://sybiltec.com/clients/">See All Clients >></a></div>
