Update hero on homepage

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <div class="row">
                         <div class="col-2">
                             <div class="logo">
-                                <a href="/"><img src="https://sybiltec.com/images/logos/low-res/sybiltec.webp" alt="Sybiltec Web Design"></a>
+                                <a href="/"><img src="images/logos/sybiltec-logo-small.png" alt="Sybiltec Web Design"></a>
                             </div>
                         </div>
                         <div class="col-10">
@@ -131,17 +131,20 @@
                 </div>
             </div>
         </div>
-        <div class="hero">
+        <div class="hero homepage">
             <div class="container-1140">
                 <div class="row">
                     <div class="col-6">
-                        <h1>Designing websites that make an impact</h1>
-                        <h2 class="padding-bottom">A web designer supporting small businesses in London, Kent, Surrey, all across the UK and beyond.</h2>
-                        <h3 class="padding-bottom"><i class="fa-solid fa-check"></i><span>Web Design</span><i class="fa-solid fa-check"></i><span>Web Development</span><i class="fa-solid fa-check"></i><span>Website Maintenance</span></h3>
+                        <h1>Transform your website into a platform for <spam class="emphasis">growth</spam></h1>
+                        <p>Bespoke web design services for small businesses in London, Surrey, Kent, all across the UK and beyond.</p>
+                        
+                            <p><i class="fa-solid fa-circle-check"></i><span>Web Design</span></p>
+                            <p><i class="fa-solid fa-circle-check"></i><span>Web Development</span></p>
+                            <p class="padding-bottom"><i class="fa-solid fa-circle-check"></i><span>Website Maintenance</span></p>
                         <a id="btn-contact" class="btn-primary" href="https://sybiltec.com/contact/">Start Your Project Today</a>
                     </div>
                     <div class="col-6">
-                        <img src="images/clients/tech-diplomacy-academy.png" alt="Tech Diplomacy Academy">
+                        <img src="images/clients/tech-diplomacy-academy-cropped.webp" alt="Tech Diplomacy Academy">
                     </div>
                 </div>
             </div>
@@ -183,7 +186,7 @@
         <div class="clients section container-1140 padding-top">
             <h2 class="center">What We've Done</h2>
                 <hr>
-            <p class="center">We have worked with businesses from a wide variety of industry sectors, including consultancies, wellbeing organisations, creatives, charities and fashion brands.<br>See some examples of our best work below.</p>
+            <p class="center">We have worked with businesses from a wide variety of industry sectors, including consultancies, wellbeing organisations, creatives, charities and fashion brands. See some examples of our best work below.</p>
             <div class="padding-top center">
                 <div class="row">
                     <div class="col-3"><img src="images/clients/bexley-linkup.png" alt="Bexley Linkup"><p class="customer">Bexley Linkup</p></div>
